--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>      
+<head>
+      <link rel="icon" href="../assets/favicon/favicon-32x32.ico"><!-- 32×32 -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Глобус</title>
