--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,30 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header class="text-black p-3">
+        <div class="container d-flex justify-content-between align-items-center border-bottom" style="height: 65px; width: 200000px;">
+            <h1 class="h4"><img src="../assets/logo/logo.svg" alt="logo" style="height: 16px; width: 16px; margin-right: 16px;">Глобус</h1>
+            <nav>
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
+                    О нас
+                </button>
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
+                    Контакты
+                </button>
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
+                    Путешествия
+                </button>
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
+                    Полёты
+                </button>
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
+                    Отели
+                </button>
+            </nav>
+            
+            <img src="../assets/images/example-avatars/avatar-man1.png" class="rounded-circle justify-content-end" style="width: 40px; height: 40px;" alt="Avatar" />
+        </div>
+    </header>
 
 </body>
 <script src="../bootstrap/js/bootstrap.bundle.min.js"></script> 
