Добавлена первичная карусель преимуществ сайта

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,6 +42,51 @@
         </div>
     </header>
 
+    <main>
+        <div id="carouselExampleCaptions" class="carousel slide" style="width: 928px; height: 480px; margin-left: auto; margin-right: auto;" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+
+            <div class="carousel-inner">
+                <div class="carousel-item active image">
+                    <img src="../assets/images/carousel-images/carousel-image1.jpg" class="d-block w-100" alt="" style="border-radius: 12px;">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p style="font-size: 48px;"><b>Приветствуем вас в Глобус</b></p>
+                        <p style="font-size: 16px;">Мы - туристическая компания, которая поможет вам спланировать и забронировать ваше следующее путешествие.</p>
+                    </div>
+                </div>
+
+                <div class='carousel-item image'>
+                    <img src='../assets/images/carousel-images/carousel-image2.png' class='d-block w-100' alt='' style='border-radius: 12px;'>
+                    <div class='carousel-caption d-none d-md-block'>
+                        <p style='font-size: 48px;'><b>Приветствуем вас в Глобус</b></p>
+                        <p style='font-size: 16px;'>Мы - туристическая компания, которая поможет вам спланировать и забронировать ваше следующее путешествие.</p>
+                    </div>
+                </div>
+
+                <div class='carousel-item image'>
+                    <img src='../assets/images/carousel-images/carousel-image3.png' class='d-block w-100' alt='' style='border-radius: 12px;'>
+                    <div class='carousel-caption d-none d-md-block'>
+                        <p style='font-size: 48px;'><b>Приветствуем вас в Глобус</b></p>
+                        <p style='font-size: 16px;'>Мы - туристическая компания, которая поможет вам спланировать и забронировать ваше следующее путешествие.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Навигационные кнопки (по желанию) -->
+            <!--
+            <button class='carousel-control-prev' type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide='prev'>
+                ...
+            </button>
+            -->
+            <!--
+            Добавьте кнопку "Далее"
+            -->
+        </div>
+    </main>
 </body>
 <script src="../bootstrap/js/bootstrap.bundle.min.js"></script> 
 </html>
