--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,19 +7,14 @@
   <title>Глобус</title>
 
 
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap-utilities.min.css">
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap-reboot.css">
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap-utilities.css">
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap-utilities.css">
-  <link rel="stylesheet" href="../bootstrap/css/style.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../vendor/bootstrap/css/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header class="text-black p-3">
-        <div class="container d-flex justify-content-between align-items-center border-bottom" style="height: 65px; width: 200000px;">
-            <h1 class="h4"><img src="../assets/logo/logo.svg" alt="logo" style="height: 16px; width: 16px; margin-right: 16px;">Глобус</h1>
+        <div class="container d-flex justify-content-between align-items-center border-bottom" style="height: 65px; width: 100%;">
+            <h1 class="h4"><img src="../assets/logo.svg" alt="logo" style="height: 16px; width: 16px; margin-right: 16px;">Глобус</h1>
             <nav>
                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#question">
                     О нас
@@ -75,18 +70,8 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Навигационные кнопки (по желанию) -->
-            <!--
-            <button class='carousel-control-prev' type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide='prev'>
-                ...
-            </button>
-            -->
-            <!--
-            Добавьте кнопку "Далее"
-            -->
         </div>
     </main>
 </body>
-<script src="../bootstrap/js/bootstrap.bundle.min.js"></script> 
+<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
 </html>
