--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
         <header class="text-black p-3 border-bottom">
             <div class="container-fluid d-flex justify-content-between align-items-center px-3">
                 <h1 class="h4 d-flex align-items-center m-0">
-                    <img src="../assets/logo.svg" alt="logo" style="height: 16px; width: 16px; margin-right: 8px;">
+                    <img src="../assets/logo.svg" alt="logo" class="logo-img">
                     Глобус
                 </h1>
                 
@@ -28,6 +28,8 @@
                     <button class="nav-btn" type="button" data-bs-toggle="modal" data-bs-target="#flightsModal">Полёты</button>
                     <button class="nav-btn" type="button" data-bs-toggle="modal" data-bs-target="#hotelsModal">Отели</button>
                 </div>
+                <!-- Аватар пользователя -->
+                <img src="../assets/images/example-avatars/avatar-man1.png" class="rounded-circle user-avatar" alt="Avatar" />
             </div>
         </header>
         
