Добавлены кнопки вверх, заказать звонок

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="text-black p-3 border-bottom">
+    <header class="text-black p-3 border">
         <div class="container-fluid d-flex justify-content-between align-items-center px-3">
             <!-- Логотип -->
             <h1 class="h4 d-flex align-items-center m-0">
@@ -412,8 +412,6 @@
         <div class="container d-flex flex-column justify-content-between h-100">
             <!-- Первая строка: ссылки, распределенные по ширине -->
             <div class="d-flex justify-content-between text-center">
-                <a href="#about" class="footer-link">О нас</a>
-                <a href="#contact" class="footer-link">Связаться с нами</a>
                 <a href="#privacy" class="footer-link">Политика конфиденциальности</a>
                 <a href="#terms" class="footer-link">Условия оказания услуг</a>
             </div>
@@ -436,6 +434,21 @@
             </div>
         </div>
     </footer>
+    
+<!-- Кнопка "Вверх" с иконкой -->
+<button class="btn btn-light fix-button btn-up">
+    <img src="../assets/icons/arrowUp.svg" alt="Вверх" class="icon-size">
+</button>
+
+<!-- Кнопка "Заказать звонок" с иконкой WhatsApp -->
+<button class="btn btn-success fix-button btn-whatsapp">
+    <img src="../assets/icons/whatsApp.svg" alt="WhatsApp" class="icon-size">
+</button>
+
+
+
+
+
 </body>
 
 <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
