Добавлены модальные окна для ссылок подвала

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,9 +50,11 @@
     </button>
 
     <!-- Кнопка "Заказать звонок" с иконкой WhatsApp -->
-    <button class="btn btn-success fix-button btn-whatsapp">
+    <!-- Пример номера -->
+    <a href="https://wa.me/1234567890" target="_blank" class="btn btn-success fix-button btn-whatsapp" title="Написать в WhatsApp">
         <img src="../assets/icons/whatsApp.svg" alt="WhatsApp" class="icon-size">
-    </button>
+    </a>
+
 </body>
     <!-- Подключение jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
