--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url='src/html/index.html'" />
     <title>Перенаправление...</title>
 </head>
