--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="icon" href="../assets/favicon/favicon-32x32.ico"> <!-- Фавикон сайта -->
+    <link rel="icon" href="../assets/favicon/favicon-32x32.ico"> <!-- Фавикон -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Глобус</title>
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css"> <!-- Подключение стилей Bootstrap -->  
-    <link rel="stylesheet" href="../styles/style.css"> <!-- Подключение пользовательских стилей -->
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
